--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "concurrently": "^9.1.2",
     "eslint": "^9.22.0",
     "prettier": "^3.5.3"
+  },
+  "dependencies": {
+    "@changesets/cli": "^2.28.1"
   }
 }
