--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -44,6 +44,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "use-sound": "^5.0.0",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
