--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   ],
   "type": "module",
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "concurrently": "^9.1.2",
     "eslint": "^9.22.0",
     "prettier": "^3.5.3"
